# iaProcessImageRecognition

./: CMakeLists.txt  README.md  defines.h  detector.cpp  detector.h  detector.hpp  fpsCounter.h  main.cpp  screenshot.cpp  screenshot.h
ico/: appicon.rc
